--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -10,9 +10,10 @@
         android:id="@+id/etTweet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="What's happening?"
         android:layout_above="@+id/bTweet"
-        android:layout_alignParentStart="true"
-        android:hint="What's happening?">
+        android:maxLength="140"
+        android:layout_alignParentStart="true">
     </EditText>
 
     <Button
@@ -24,5 +25,13 @@
         android:background="@color/colorLogin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:id="@+id/tvCharacterCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="TextView" />
 
 </RelativeLayout>
