--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -34,4 +34,22 @@
         android:layout_alignParentStart="true"
         android:text="TextView" />
 
+    <ImageButton
+        android:id="@+id/ibClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:tint="@color/twitter_blue"
+        android:onClick="close"
+        app:srcCompat="@drawable/ic_vector_close" />
+
+    <ImageButton
+        android:id="@+id/ibAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/ic_vector_person" />
+
 </RelativeLayout>
