--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miCompose"
-        android:icon="@drawable/ic_launcher"
-        app:showAsAction="ifRoom"
-        android:title="Compose">
-    </item>
+        android:icon="@drawable/ic_vector_compose"
+        android:title="Compose"
+        android:tint="@color/twitter_blue"
+        app:showAsAction="always"></item>
+
 
     <item
         android:id="@+id/miProfile"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_vector_person"
         app:showAsAction="ifRoom|withText"
         android:title="Profile">
     </item>
