--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/miActionProgress"
+        android:orderInCategory="100"
+        android:title="Loading..."
+        android:visible="false"
+        app:actionLayout="@layout/action_view_progress"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/miProfile"
+        android:icon="@drawable/ic_vector_person"
+        android:tint="@color/twitter_blue"
+        android:title="Profile"
+        app:showAsAction="always">
+
+    </item>
+
+
+    <item
+        android:id="@+id/twitterLogo"
+        android:icon="@drawable/ic_launcher_twitter_round"
+        app:showAsAction="always"
+        android:title="Icon">
+    </item>
+
+
     <item
         android:id="@+id/miCompose"
         android:icon="@drawable/ic_vector_compose"
@@ -8,11 +35,4 @@
         android:tint="@color/twitter_blue"
         app:showAsAction="always"></item>
 
-
-    <item
-        android:id="@+id/miProfile"
-        android:icon="@drawable/ic_vector_person"
-        app:showAsAction="ifRoom|withText"
-        android:title="Profile">
-    </item>
 </menu>
