--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
-    android:layout_width="match_parent" android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context="com.codepath.apps.restclienttemplate.TimelineActivity">
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -54,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:paddingBottom="15dp"
+        android:paddingBottom="30dp"
         android:layout_below="@+id/tvUserName"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:text="TextView"
@@ -70,5 +73,52 @@
         android:paddingTop="5dp"
         android:paddingBottom="2dp"
         android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:id="@+id/ibComment"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_above="@+id/ivLine"
+        android:layout_alignStart="@+id/tvBody"
+        android:paddingBottom="5dp"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_vector_compose_dm" />
+
+    <ImageButton
+        android:id="@+id/ibRetweet"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_above="@+id/ivLine"
+        android:layout_toEndOf="@+id/ibComment"
+        android:paddingBottom="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_vector_retweet_stroke" />
+
+    <ImageButton
+        android:id="@+id/ibLike"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignBottom="@+id/ivLine"
+        android:layout_toEndOf="@+id/ibRetweet"
+        android:paddingBottom="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_vector_heart_stroke" />
+
+    <ImageButton
+        android:id="@+id/ibMessage"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_above="@+id/ivLine"
+        android:layout_toEndOf="@+id/ibLike"
+        android:paddingBottom="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="20dp"
+        android:backgroundTint="@color/white"
+        app:srcCompat="@drawable/ic_vector_messages_stroke" />
 
 </RelativeLayout>
