--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="inline_action_retweet_pressed">@color/medium_gray_50</color>
     <color name="primary_material_dark">#1da1f2</color>
     <color name="black">#000000</color>
+    <color name="white">#fff</color>
 </resources>
