--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -58,40 +58,36 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:paddingBottom="30dp"
-        android:layout_below="@+id/tvUserName"
-        android:layout_toEndOf="@+id/ivProfileImage"
-        android:layout_marginBottom="10dp"
         android:text="TextView"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:layout_below="@+id/tvUserName"
+        android:layout_toEndOf="@+id/ivProfileImage" />
 
     <ImageView
         android:id="@+id/ivLine"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@+id/tvBody"
-        android:layout_alignParentEnd="true"
-        app:srcCompat="@color/inline_action"
-        android:paddingTop="5dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/ibComment"
         android:paddingBottom="2dp"
-        android:layout_alignParentStart="true" />
+        android:paddingTop="5dp"
+        app:srcCompat="@color/inline_action" />
 
     <ImageButton
         android:id="@+id/ibComment"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_above="@+id/ivLine"
-        android:layout_alignStart="@+id/tvBody"
-        android:layout_marginBottom="5dp"
         android:backgroundTint="@color/white"
         android:paddingBottom="5dp"
-        app:srcCompat="@drawable/ic_vector_compose_dm" />
+        app:srcCompat="@drawable/ic_vector_compose_dm"
+        android:layout_below="@+id/ivImage"
+        android:layout_alignStart="@+id/ivImage" />
 
     <ImageButton
         android:id="@+id/ibRetweet"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_above="@+id/ivLine"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="20dp"
         android:layout_toEndOf="@+id/ibComment"
         android:backgroundTint="@color/white"
@@ -102,24 +98,33 @@
         android:id="@+id/ibLike"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_alignBottom="@+id/ivLine"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="20dp"
-        android:layout_toEndOf="@+id/ibRetweet"
         android:backgroundTint="@color/white"
         android:paddingBottom="5dp"
-        app:srcCompat="@drawable/ic_vector_heart_stroke" />
+        app:srcCompat="@drawable/ic_vector_heart_stroke"
+        android:layout_alignTop="@+id/ibMessage"
+        android:layout_toEndOf="@+id/ibRetweet"
+        android:layout_marginStart="24dp" />
 
     <ImageButton
         android:id="@+id/ibMessage"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:layout_above="@+id/ivLine"
-        android:layout_marginBottom="5dp"
         android:layout_marginLeft="20dp"
-        android:layout_toEndOf="@+id/ibLike"
         android:backgroundTint="@color/white"
         android:paddingBottom="5dp"
-        app:srcCompat="@drawable/ic_vector_messages_stroke" />
+        app:srcCompat="@drawable/ic_vector_messages_stroke"
+        android:layout_above="@+id/ivLine"
+        android:layout_toEndOf="@+id/ibLike"
+        android:layout_marginStart="21dp" />
+
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/tvBody"
+        android:layout_below="@+id/tvBody"
+        app:srcCompat="@android:color/transparent" />
 
 </RelativeLayout>
