--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-
         android:layout_alignParentStart="true"
         android:hint="What's happening?"></EditText>
 
@@ -41,6 +40,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:tint="@color/twitter_blue"
+        android:background="@android:color/transparent"
         android:onClick="close"
         app:srcCompat="@drawable/ic_vector_close" />
 
@@ -50,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:background="@android:color/transparent"
         app:srcCompat="@drawable/ic_vector_person" />
 
 </RelativeLayout>
