--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -140,7 +140,7 @@
         android:id="@+id/tvRetweet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/ivImage"
+        android:layout_below="@+id/ivImage"
         android:layout_toEndOf="@+id/ibRetweet"
         android:text="TextView" />
 
@@ -157,7 +157,7 @@
         android:id="@+id/tvLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/ivImage"
+        android:layout_below="@+id/ivImage"
         android:layout_toEndOf="@+id/ibLike"
         android:text="TextView" />
 
