--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -12,10 +12,11 @@
         android:id="@+id/ivProfileImage"
         android:layout_width="75dp"
         android:layout_height="75dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="10dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         app:srcCompat="@android:color/black" />
 
     <TextView
@@ -26,17 +27,21 @@
         android:layout_marginLeft="10dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         android:text="TextView"
-        android:textAppearance="@android:style/TextAppearance.Large" />
+        android:textStyle="bold"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tvScreenName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:text="TextView"
         android:layout_below="@+id/tvUserName"
-        android:layout_toEndOf="@+id/ivProfileImage" />
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
 
     <TextView
         android:id="@+id/tvBody"
