--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -17,7 +17,10 @@
             android:layout_height="75dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
             android:src="@android:drawable/screen_background_light_transparent" />
         
         <TextView
@@ -26,7 +29,9 @@
             android:layout_height="wrap_content" 
             android:layout_toRightOf="@id/ivProfileImage"
             android:text="Name"
-            android:textSize="16sp" />
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.Large"
+            android:textSize="20sp" />
         
         <TextView
             android:id="@+id/tvTagline"
@@ -35,7 +40,8 @@
             android:layout_alignStart="@id/tvName"
             android:layout_below="@id/tvName"
             android:text="TagLine"
-            android:textSize="12sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
@@ -45,19 +51,24 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/rlUserHeader"
         android:layout_marginBottom="10dp">
-        
-        <TextView
-            android:id="@+id/tvFollowers"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="5 Followers"/>
 
         <TextView
             android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:text="5 Following" />
+
+        <TextView
+            android:id="@+id/tvFollowers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
-            android:text="5 Following"/>
+            android:text="5 Followers" />
+
+
 
         
     </LinearLayout>
