--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -37,24 +37,24 @@
         android:id="@+id/ibClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:tint="@color/twitter_blue"
         android:background="@android:color/transparent"
         android:onClick="close"
         app:srcCompat="@drawable/ic_vector_close" />
 
-    <ImageButton
-        android:id="@+id/ibAccount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+    <ImageView
+        android:id="@+id/ivProfileImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@android:color/transparent"
+        android:onClick="onProfile"
         app:srcCompat="@drawable/ic_vector_person" />
+
 
 </RelativeLayout>
